OpenFst: Release 1.6
    * Fixed PROGRAM_FLAGS documentation string in binaries (1.6.8)
    * Fixed handling of symbol tables in EpsNormalize (1.6.8)
    * Fixed HashMatcher issues with SetState() and Find() consistency (1.6.8)
    * Fixed error reporting when FST arc type unknown (1.6.8)
    * The `first_path` option to ShortestPath is now optimal for A* (1.6.7)
    * Renames SymbolTable::kNoSymbol to kNoSymbol (1.6.7)
    * Exposes PowerMapper to the scripting API (1.6.7)
    * Fixes linking of the special SOs (1.6.7)
    * Fixes error handling in HashMatcher (1.6.6)
    * Adds kShortestDelta for operations dependent on shortest-distance (1.6.6)
    * Adds Python methods for (un)pickling and (de)serializing FSTs (1.6.6)
    * Adds constructive variants of Invert and Project (1.6.6)
    * Increases code sharing in MemoryPool/MemoryArena (1.6.6)
    * Improves consistency of matcher FST ownership (1.6.6)
    * Adds non-trivial A* estimator class (1.6.6)
    * Prevents unreachable code generation in libfstscript (1.6.5)
    * Adds move constructors for non-trivial weight types (1.6.5)
    * Standardizes method names for tuple weight types (1.6.5)
    * Eliminates undefined behavior in weight hashing (1.6.5)
    * Optimizes binary search in SortedMatcher (1.6.5)
    * Adds SetWeight (1.6.5)
    * Fixes typing error in Python FAR reader (1.6.4)
    * Removes restriction that Prune argument have commutative weights (1.6.3)
    * Improves configuration of CompositeWeight readers and writers (1.6.3)
    * Improves accuracy of ShortestDistance summation (1.6.3)
    * SetFinal now "moves" its weight argument (1.6.3)
    * Exposes ArcIterator and EncodeMapper flags in Python (1.6.3)
    * Properly sets return codes in FST binaries (1.6.3)
    * Eliminates StringWeight macros (1.6.3)
    * Finalizes most virtual method overrides (1.6.2)
    * Fixes missing includes of <fst/log.h> (1.6.1)
    * Adds float format support to FST drawing (1.6.1)